--- a/FoodPlanner/FoodPlanner/Views/RecipePage.xaml
+++ b/FoodPlanner/FoodPlanner/Views/RecipePage.xaml
@@ -30,7 +30,7 @@
             </Label.Content>
         </Label>
 
-        <ScrollViewer Grid.Column="1" Grid.Row="1" Margin="5,0,-5,0">
+        <ScrollViewer Grid.Column="1" Grid.Row="1" Padding="5,0,0,0">
             <TextBlock Text="{Binding RecipesPreparation.Preparation}" TextWrapping="Wrap"/>
         </ScrollViewer>
 
