--- a/FoodPlanner/FoodPlanner/App.xaml
+++ b/FoodPlanner/FoodPlanner/App.xaml
@@ -4,7 +4,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:t="http://schemas.microsoft.com/winfx/2006/xaml/presentation, http://schemas.microsoft.com/netfx/2007/xaml/presentation"
              xmlns:local="clr-namespace:FoodPlanner"
-             StartupUri="MainWindow.xaml">
+             Startup="ApplicationStartup"
+             Exit="ApplicationExit">
     <Application.Resources>
         <!--Brushes used in templates-->
         <SolidColorBrush x:Key="Button.Static.Border" Color="#898888"/>
