--- a/FoodPlanner/FoodPlanner/App.xaml
+++ b/FoodPlanner/FoodPlanner/App.xaml
@@ -136,37 +136,73 @@
         <!--End: Meal planning Page Template for day listboxes-->
         
         <!--Start: Settings Page StackPanel Template-->
-        <Style x:Key="STester" TargetType="{x:Type ListBox}">
-            <Setter Property="BorderThickness" Value="20"/>
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate>
-                        <StackPanel>
-                            <Expander Header="User Information">
-                                <Grid>
-                                    <Grid.RowDefinitions>
-                                        <RowDefinition/>
-                                        <RowDefinition/>
-                                        <RowDefinition/>
-                                    </Grid.RowDefinitions>
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition/>
-                                    </Grid.ColumnDefinitions>
-                                    
-                                    <TextBlock Text="Persons in the household:"/>
-                                    <TextBlock Text="{Binding Path=PersonsInHouseHold}" Grid.Column="1"/>
-                                    <TextBlock Text="Days to shop:" Grid.Row="1"/>
-                                    
-                                    <TextBlock Text="Name:" Grid.Row="2"/>
-                                    <TextBlock Text="{Binding Name}" Grid.Row="2" Grid.Column="1"/>
-                                </Grid>
-                            </Expander>
-                            <Expander Header="Mere"></Expander>
-                        </StackPanel>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
+        <DataTemplate x:Key="UserSettingsDataTemplate">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                
+                <TextBlock Text="Persons in the household:"/>
+                <TextBlock Text="{Binding PersonsInHouseHold}" Grid.Column="1"/>             
+                <TextBlock Text="Number of days to shop for:" Grid.Row="1"/>
+                <TextBlock Text="{Binding ShopAhead}" Grid.Row="1" Grid.Column="1"/>              
+            </Grid>
+        </DataTemplate>
+        
+        <DataTemplate x:Key="StockSettingsDataTemplate">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+
+                
+                <TextBlock Text="Stock List" Grid.Column="1" FontSize="14" TextDecorations="Underline"/>
+                <ListView Grid.Row="1" ItemsSource="{Binding StockQuantities}">
+                    <ListView.View>
+                        <GridView>
+                            <GridViewColumn Width="Auto" Header="Name" CellTemplate="{StaticResource ShoppingListNameCell}"/>
+                            <GridViewColumn Width="Auto" Header="Quantity And Unit" CellTemplate="{StaticResource ShoppingListUnitAndQuantityCell}"/>
+                        </GridView>
+                    </ListView.View>
+                </ListView>
+                <Button Content="Remove Ingredient" Grid.Row="2"/>
+
+                <TextBlock Text="Add a new stock ingredient" Grid.Row="3" Grid.Column="1" FontSize="14" TextDecorations="Underline"/>
+                <TextBlock Text="Name" Grid.Row="4"/>
+                <TextBlock Text="Quantity" Grid.Row="4" Grid.Column="1"/>
+                <TextBlock Text="Unit" Grid.Row="4" Grid.Column="2"/>
+                <TextBox Grid.Row="5"/>
+                <TextBox Grid.Row="5" Grid.Column="1"/>
+                <ComboBox Grid.Row="5" Grid.Column="2"/>
+                <ListBox Grid.Row="6"/>
+                <Button Grid.Row="6" Content="Add Ingredient" Grid.Column="2"/>
+            </Grid>
+        </DataTemplate>
+        
+        <DataTemplate x:Key="FavoritIngredientDataTemplate">
+            
+        </DataTemplate>
+        
+        <DataTemplate x:Key="UnwantedIngredientsDataTemplate">
+            
+        </DataTemplate>
+
         <!--End: Settings Page StackPanel Template-->
     </Application.Resources>
 </Application>
