--- a/FoodPlanner/FoodPlanner/Views/SettingsPage.xaml
+++ b/FoodPlanner/FoodPlanner/Views/SettingsPage.xaml
@@ -12,14 +12,11 @@
     </Page.DataContext>
 
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition/>
-            <RowDefinition/>
-        </Grid.RowDefinitions>
-        <ListBox ItemsSource="{Binding CurrentUser}" Style="{StaticResource STester}">
-            
+        <ListBox>
+            <Expander Header="User speficics" DataContext="{Binding Path=CurrentUser}" ContentTemplate="{StaticResource UserSettingsDataTemplate}"/>
+            <Expander Header="Stock management" DataContext="{Binding Path=CurrentUser}" ContentTemplate="{StaticResource StockSettingsDataTemplate}"/>
+            <Expander Header="Favorite ingredients" DataContext="{Binding Path=CurrentUser}" ContentTemplate="{StaticResource FavoritIngredientDataTemplate}"/>
+            <Expander Header="Unwanted ingredients" DataContext="{Binding Path=CurrentUser}" ContentTemplate="{StaticResource UnwantedIngredientsDataTemplate}"/>
         </ListBox>
-
-        <TextBlock Text="{Binding TestString, Mode=OneWay}" Grid.Row="1" Grid.RowSpan="1"/>
     </Grid>
 </Page>
