--- a/FoodPlanner/FoodPlanner/Views/SettingsPage.xaml
+++ b/FoodPlanner/FoodPlanner/Views/SettingsPage.xaml
@@ -18,16 +18,31 @@
                     <Grid.RowDefinitions>
                         <RowDefinition/>
                         <RowDefinition/>
+                        <RowDefinition/>
+                        <RowDefinition/>
                     </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition/>
-                        <ColumnDefinition/>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="Auto"/>
                     </Grid.ColumnDefinitions>
 
-                    <TextBlock Text="Persons in the household:"/>
-                    <TextBlock Text="{Binding PersonsInHouseHold}" Grid.Column="1"/>
-                    <TextBlock Text="Number of days to shop for:" Grid.Row="1"/>
-                    <TextBlock Text="{Binding ShopAhead}" Grid.Row="1" Grid.Column="1"/>
+                    <TextBlock Text="Persons in the household:" Padding="0,5,5,5"/>
+                    <TextBlock Text="{Binding PersonsInHouseHold}" Grid.Column="1" Padding="5"/>
+                    <Button Content="Plus" Grid.Column="3" Padding="5"/>
+                    <Button Content="Minus" Grid.Column="2" Padding="5"/>
+                    
+                    <TextBlock Text="Number of days to shop for:" Grid.Row="1" Padding="0,5,5,5"/>
+                    <TextBlock Text="{Binding ShopAhead}" Grid.Row="1" Grid.Column="1" Padding="5"/>
+                    <Button Content="Plus" Grid.Column="3" Grid.Row="1" Padding="5"/>
+                    <Button Content="Minus" Grid.Column="2" Grid.Row="1" Padding="5"/>
+
+                    <TextBlock Text="Start up screen" Grid.Row="2" Padding="0,5,5,5"/>
+                    <ComboBox Grid.Column="2" Grid.Row="2" Grid.ColumnSpan="2"/>
+                    
+                    <Button Content="Save changes" Grid.Row="3" Grid.Column="4"/>
                 </Grid>
             </Expander>
             <Expander Header="Stock management" DataContext="{Binding Path=CurrentUser}">
@@ -39,9 +54,10 @@
                         <RowDefinition/>
                         <RowDefinition/>
                         <RowDefinition/>
-                        <RowDefinition/>
+                        <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
                         <ColumnDefinition Width="*"/>
                         <ColumnDefinition Width="*"/>
                         <ColumnDefinition Width="*"/>
@@ -59,7 +75,7 @@
                     </ListView>
                     <Button Content="Remove Ingredient" Grid.Row="2"/>
 
-                    <TextBlock Text="Add a new stock ingredient" Grid.Row="3" Grid.Column="1" FontSize="14" TextDecorations="Underline"/>
+                    <TextBlock Text="Add a new stock ingredient" Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="2" FontSize="14" TextDecorations="Underline"/>
                     <TextBlock Text="Name" Grid.Row="4"/>
                     <TextBlock Text="Quantity" Grid.Row="4" Grid.Column="1"/>
                     <TextBlock Text="Unit" Grid.Row="4" Grid.Column="2"/>
@@ -74,11 +90,79 @@
 
                     <TextBox Grid.Row="5" Grid.Column="1"/>
                     <ComboBox Grid.Row="5" Grid.Column="2"/>
-                    <Button Grid.Row="6" Content="Add Ingredient" Grid.Column="2"/>
+                    <Button Grid.Row="6" Content="Add Ingredient" Grid.Column="3"/>
                 </Grid>
             </Expander>
-            <Expander Header="Favorite ingredients" DataContext="{Binding Path=CurrentUser}"/>
-            <Expander Header="Unwanted ingredients" DataContext="{Binding Path=CurrentUser}"/>
+            <Expander Header="Favorite ingredients" DataContext="{Binding Path=CurrentUser}">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="Auto"/>
+                    </Grid.ColumnDefinitions>
+
+                    <TextBox Text="{Binding SearchText, Mode=TwoWay, Delay=500, UpdateSourceTrigger=PropertyChanged}" Grid.ColumnSpan="2"/>
+                    <ListBox ItemsSource="{Binding FoundIngredients}" SelectedItem="{Binding SelectedIngredient}" Visibility="{Binding AutoCompleteListVisibility}" Grid.Row="1" Grid.ColumnSpan="2">
+                        <!--<i:Interaction.Triggers>
+                            <i:EventTrigger EventName="MouseUp">
+                                <i:InvokeCommandAction Command="{Binding AddIngredientToInventoryCommand}" />
+                            </i:EventTrigger>
+                        </i:Interaction.Triggers>-->
+                    </ListBox>
+
+                    <TextBlock Text="Favorite ingredients list" FontSize="14" TextDecorations="Underline" Grid.Row="2" Grid.ColumnSpan="2"/>
+                    <ListBox ItemsSource="{Binding Path=GraylistIngredients}" Grid.Row="3" Grid.ColumnSpan="2">
+                        <ListBox.ItemTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{Binding Path=Ingredient.Name}"/>
+                            </DataTemplate>
+                        </ListBox.ItemTemplate>
+                    </ListBox>
+                    
+                    <Button Content="Remove" Grid.Row="4" Grid.Column="1"/>
+                </Grid>
+            </Expander>
+            <Expander Header="Unwanted ingredients" DataContext="{Binding Path=CurrentUser}">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="Auto"/>
+                    </Grid.ColumnDefinitions>
+
+                    <TextBox Text="{Binding SearchText, Mode=TwoWay, Delay=500, UpdateSourceTrigger=PropertyChanged}" Grid.ColumnSpan="2"/>
+                    <ListBox ItemsSource="{Binding FoundIngredients}" SelectedItem="{Binding SelectedIngredient}" Visibility="{Binding AutoCompleteListVisibility}" Grid.Row="1" Grid.ColumnSpan="2">
+                        <!--<i:Interaction.Triggers>
+                            <i:EventTrigger EventName="MouseUp">
+                                <i:InvokeCommandAction Command="{Binding AddIngredientToInventoryCommand}" />
+                            </i:EventTrigger>
+                        </i:Interaction.Triggers>-->
+                    </ListBox>
+
+                    <TextBlock Text="Favorite ingredients list" FontSize="14" TextDecorations="Underline" Grid.Row="2" Grid.ColumnSpan="2"/>
+                    <ListBox ItemsSource="{Binding Path=GraylistIngredients}" Grid.Row="3" Grid.ColumnSpan="2">
+                        <ListBox.ItemTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{Binding Path=Ingredient.Name}"/>
+                            </DataTemplate>
+                        </ListBox.ItemTemplate>
+                    </ListBox>
+
+                    <Button Content="Remove" Grid.Row="4" Grid.Column="1"/>
+                </Grid>
+            </Expander>
         </ListBox>
     </Grid>
 </Page>
