--- a/FoodPlanner/FoodPlanner/App.xaml
+++ b/FoodPlanner/FoodPlanner/App.xaml
@@ -65,14 +65,20 @@
                             <Grid.ColumnDefinitions >
                                 <ColumnDefinition Width="75"/>
                                 <ColumnDefinition Width="{Binding ElementName=ItemGrid,Path=MaxWidth}"/>
+                                <ColumnDefinition/>
                             </Grid.ColumnDefinitions>
                             <Grid.RowDefinitions>
                                 <RowDefinition/>
                                 <RowDefinition/>
                             </Grid.RowDefinitions>
                             <Image  Grid.RowSpan="2" Height="75" Width="75" Stretch="UniformToFill" Source="{Binding recipe.Image}" />
-                            <Label Grid.Column="1" Grid.Row="1" Content="{Binding getMatchPercentage}" ContentStringFormat="You have {0} of the needed ingredients"/>
-                            <TextBlock Grid.Column="1" Text="{Binding recipe.Title}" Padding="5 0 5 0" TextTrimming="CharacterEllipsis" FontSize="30" Foreground="{StaticResource Text.Orange}"/>
+                            <Label Grid.Column="1"  Grid.Row="1" Content="{Binding getMatchPercentage}" ContentStringFormat=" {0} ingredients"/>
+                            <TextBlock Grid.Column="1" Grid.ColumnSpan="2" Text="{Binding recipe.Title}" Padding="5 0 5 0" TextTrimming="CharacterEllipsis" FontSize="20" Foreground="{StaticResource Text.Orange}"/>
+                            <Button Grid.Column="2" Grid.Row="1" Margin="0 0 5 0" HorizontalAlignment="Right" Style="{StaticResource ButtonIconTemplate}" Height="30" Width="30">
+                                <Button.Background>
+                                    <ImageBrush ImageSource="Images/plusIcon.png" Stretch="Uniform"/>
+                                </Button.Background>
+                            </Button>
                         </Grid>
                     </Border>
                 </StackPanel>
