--- a/FoodPlanner/FoodPlanner/Views/RecipePage.xaml
+++ b/FoodPlanner/FoodPlanner/Views/RecipePage.xaml
@@ -14,6 +14,7 @@
 
     <Grid DataContext="{Binding Recipe}">
         <Grid.RowDefinitions>
+            <RowDefinition Height="30"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
@@ -21,20 +22,33 @@
             <ColumnDefinition Width="100"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
+        
+        <Border Grid.ColumnSpan="2" BorderThickness="0 0 0 2" BorderBrush="Black"/>
 
-        <Image Height="100" Width="100" Source="{Binding Image}"/>
+        <Button x:Name="TopBarButton" Style="{StaticResource ButtonIconTemplate}" HorizontalAlignment="Left" Width="{Binding ElementName=TopBarButton, Path=ActualHeight}">
+            <Button.Background>
+                <ImageBrush ImageSource="../Images/backArrowIcon.png" Stretch="Uniform"/>
+            </Button.Background>
+        </Button>
+        <Button Style="{StaticResource ButtonIconTemplate}" Grid.Column="1" HorizontalAlignment="Right" Width="{Binding ElementName=TopBarButton, Path=ActualHeight}">
+            <Button.Background>
+                <ImageBrush ImageSource="../Images/plusIcon.png" Stretch="Uniform"/>
+            </Button.Background>
+        </Button>
 
-        <Label Grid.Column="1" Grid.Row="0" Style="{StaticResource LabelTitle}">
+        <Image Grid.Row="1" Height="100" Width="100" Source="{Binding Image}"/>
+
+        <Label Grid.Column="1" Grid.Row="1" Style="{StaticResource LabelTitle}">
             <Label.Content>
                 <AccessText TextWrapping="Wrap" Text="{Binding Title}"/>
             </Label.Content>
         </Label>
 
-        <ScrollViewer Grid.Column="1" Grid.Row="1" Padding="5,0,0,0">
+        <ScrollViewer Grid.Column="1" Grid.Row="2" Padding="5,0,0,0">
             <TextBlock Text="{Binding RecipesPreparation.Preparation}" TextWrapping="Wrap"/>
         </ScrollViewer>
 
-        <ListBox x:Name="IngredientListbox" ItemsSource="{Binding RecipeIngredients}" ScrollViewer.VerticalScrollBarVisibility="Disabled" Grid.Row="1" Width="100" Background="{StaticResource BackgroundColour}">
+        <ListBox x:Name="IngredientListbox" ItemsSource="{Binding RecipeIngredients}" ScrollViewer.VerticalScrollBarVisibility="Disabled" Grid.Row="2" Width="100" Background="{StaticResource BackgroundColour}">
             <ListBox.ItemTemplate>    
             <DataTemplate>
                     <StackPanel>
