--- a/FoodPlanner/FoodPlanner/Views/RecipePage.xaml
+++ b/FoodPlanner/FoodPlanner/Views/RecipePage.xaml
@@ -16,6 +16,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="30"/>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
@@ -36,7 +37,7 @@
             </Button.Background>
         </Button>
 
-        <Image Grid.Row="1" Height="100" Width="100" Source="{Binding Image}"/>
+        <Image Grid.Row="1" Grid.RowSpan="2" Height="100" Width="100" Source="{Binding Image}"/>
 
         <Label Grid.Column="1" Grid.Row="1" Style="{StaticResource LabelTitle}">
             <Label.Content>
@@ -44,11 +45,11 @@
             </Label.Content>
         </Label>
 
-        <ScrollViewer Grid.Column="1" Grid.Row="2" Padding="5,0,0,0">
+        <ScrollViewer Grid.Column="1" Grid.Row="2" Grid.RowSpan="2" Padding="5,0,0,0">
             <TextBlock Text="{Binding RecipesPreparation.Preparation}" TextWrapping="Wrap"/>
         </ScrollViewer>
 
-        <ListBox x:Name="IngredientListbox" ItemsSource="{Binding RecipeIngredients}" ScrollViewer.VerticalScrollBarVisibility="Disabled" Grid.Row="1" Width="100" Background="{StaticResource BackgroundColour}" BorderThickness="0">
+        <ListBox x:Name="IngredientListbox" ItemsSource="{Binding RecipeIngredients}" ScrollViewer.VerticalScrollBarVisibility="Disabled" Grid.Row="3" Width="100" Background="{StaticResource BackgroundColour}" BorderThickness="0">
             <ListBox.ItemTemplate>    
             <DataTemplate>
                     <StackPanel>
